style.css
@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    min-width: 100vw;
    min-height: 100vh;
    background: linear-gradient(180deg, rgba(123,122,122,1) 0%, rgba(47,47,47,1) 100%);
}

/** nav bar */
nav {
    position: fixed;
    left: 0;
    z-index: 100;
    display: flex;
    flex-direction: column;
    height: 100vh;
    justify-content: space-around;
    background: linear-gradient(90deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%);
}

nav a {
    display: flex;
    flex-direction: row;
    padding: 20px;
    text-decoration: none;
    font-size: 50px;
    color: whitesmoke;
    transition: 1s;
}

nav:hover a {
    opacity: 0.3;
}

nav a:hover {
    text-shadow: 1px 1px 2px black, 0 0 25px silver;
    filter: brightness(5px);
    opacity: 1;
}

nav a span {
    display: none;
}

nav a:hover span {
    display: inline-block;
}

/** sections */
section {
    position: absolute;
    top: 0;
    width: 0;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: ease-in-out 0.5s;
    opacity: 0;
}

section:target, section.active {
    opacity: 1;
    left: 0;
    width: 100%;
    z-index: 50;
}

.section-main {
    font-size: 80px;
    font-weight: 300;
    position: absolute;
    top: 50%;
    left: 50%;
    text-align: center;
    transform: translate(-50%, -50%);
}

/** typewriter effect */
@keyframes typing {
    0% {
        width: 0%;
    }
    100% {
        width: 100%;
    }
}

@keyframes blinking-cursor {
    0% {
        border-color: white;
    }
    100% {
        border-color: transparent;
    }
}

.typed-text-container {
    display: inline-block;
}

.typed-text {
    overflow: hidden;
    white-space: nowrap;
    width: 0;
    border-right: 2px solid;
    animation: typing 3s steps(var(--word-count), end) forwards, blinking-cursor 1s infinite alternate 5s;
}

/** subtly fluctuating overlapping polygon container */
@keyframes fluctuate-big {
    0% {
        clip-path: polygon(5% 5%, 95% 10%, 95% 95%, 10% 95%); 
    }
    25% {
        clip-path: polygon(7% 5%, 95% 5%, 95% 100%, 10% 95%); 
    }
    50% { 
        clip-path: polygon(5% 5%, 93% 5%, 95% 97%, 7% 95%); 
    }
    75% {
        clip-path: polygon(5% 7%, 95% 10%, 93% 95%, 10% 95%);  
    }
    100% {
        clip-path: polygon(3% 7%, 95% 7%, 95% 93%, 7% 95%); 
    }
}

@keyframes fluctuate-med {
    0% {
        clip-path: polygon(0% 5%, 90% 5%, 100% 95%, 5% 90%); 
    }
    25% {
        clip-path: polygon(3% 5%, 93% 5%, 97% 95%, 7% 93%); 
    }
    50% { 
        clip-path: polygon(3% 3%, 93% 5%, 95% 97%, 7% 90%); 
    }
    75% {
        clip-path: polygon(3% 0, 93% 5%, 95% 95%, 5% 90%); 
    }
    100% {
        clip-path: polygon(0% 3%, 90% 3%, 97% 93%, 5% 90%); 
    }
}
/** topleft, topright, bottom right, bottom left */
@keyframes fluctuate-small {
    0% {
        clip-path: polygon(5% 5%, 95% 10%, 90% 90%, 10% 95%); 
    }
    25% {
        clip-path: polygon(5% 3%, 93% 12%, 93% 90%, 7% 95%);
    }
    50% { 
        clip-path: polygon(3% 5%, 95% 10%, 93% 87%, 10% 93%);
    }
    75% {
        clip-path: polygon(3% 7%, 95% 10%, 90% 90%, 13% 95%); 
    }
    100% {
        clip-path: polygon(5% 10%, 95% 10%, 90% 93%, 10% 97%);
    }
}

.fluctuating-fragments {
    --content-width: 800px;
    --content-height: calc(90vh);
    position: relative;
    text-align: center;
}

.fluctuating-fragments [class^="frag"], .fluctuating-fragments .text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.fluctuating-fragments .text {
    width: calc(var(--content-width) - 200px);
}

.fluctuating-fragments [class^="frag"] {
    padding: 10%;
}

.fluctuating-fragments .frag-big {
    width: calc(var(--content-width));
    height: calc(var(--content-height));
    background: linear-gradient(180deg, rgba(122,108,131,0.5) 0%, rgba(172,163,218,0.5) 100%);
    animation: fluctuate-big 20s linear infinite;
}

.fluctuating-fragments .frag-med {
    width: calc(var(--content-width));
    height: calc(var(--content-height));
    background: linear-gradient(90deg, rgba(87,101,116,0.6) 0%, rgba(173,162,171,0.6) 100%);;
    animation: fluctuate-med 20s linear infinite alternate;
}

.fluctuating-fragments .frag-small {
    width: var(--content-width);
    height: var(--content-height);
    background: linear-gradient(180deg, rgba(131,157,174,0.7) 0%, rgba(152,131,131,0.7) 100%);
    animation: fluctuate-small 20s linear infinite alternate;
}

/** binary matrix */
#matrix {
    overflow: hidden;
    width: 60vw;
    height: 80vh;
    border-radius: 66% 34% 74% 26% / 22% 70% 30% 78%;
}

/** wheel of skills */
@keyframes wheel {
    0% {
        transform: translateY(-1400%);
    }
    6.67% {
        transform: translateY(-1300%);
    }
    13.33% {
        transform: translateY(-1200%);
    }
    20% {
        transform: translateY(-1100%);
    }
    26.67% {
        transform: translateY(-1000%);
    }
    33.33% {
        transform: translateY(-900%);
    }
    40% {
        transform: translateY(-800%);
    }
    46.67% {
        transform: translateY(-700%);
    }
    53.33% {
        transform: translateY(-600%);
    }
    60% {
        transform: translateY(-500%);
    }
    66.67% {
        transform: translateY(-400%);
    }
    73.33%  {
        transform: translateY(-300%);
    }
    80% {
        transform: translateY(-200%);
    }
    86.67% {
        transform: translateY(-100%);
    }
    93.33% {
        transform: translateY(0%);
    }
    100% {
        transform: translateY(80%);
    }
}

#skillsets ul {
    position: relative;
    width: 100%;
    height: 90px;
    list-style: none;
    overflow: hidden;
}

#skillsets ul li {
    width: 100%;
    white-space: nowrap;
    animation: wheel 30s ease-in-out infinite;
}

#skillsets ul:hover li {
    animation-play-state: paused;
    filter: blur(0px);
}

/** carousel of projects */
.carousel {
    position: relative;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    display: flex;
    flex-wrap: nowrap;
}

.carousel .slide {
    position: relative;
    min-width: 100%;
    width: 100%;
    height: 100%;
    transition: 1s;
}

.carousel .slide > img {
    width: 100%;
    height: 100%;
    filter: blur(10px);
}

.carousel .nav {
    position: absolute;
    bottom: 10%;
    left: 50%;
    transform: translateX(-50%);
}

.carousel .nav .index {
    cursor: pointer;
    display: inline-block;
    width: 15px;
    height: 15px;
    border-radius: 50%;
    margin: 10px;
    border: 1px solid grey;
}

.carousel .nav .index:hover, .carousel .nav .index.active {
    background: linear-gradient(180deg, rgba(232,232,232,1) 0%, rgba(132,130,130,1) 100%);
}

/** project cards */
.card {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    min-width: 600px;
    width: 600px;
    height: auto;
    align-items: center;
    background: transparent;
    border-radius: 20px;
}

.card .circle {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.card .circle::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border-radius: 20px;
    clip-path: circle(5px at center);
    background: linear-gradient(0deg, var(--bg-color-1) 0%, var(--bg-color-2) 100%);
    transition: 1s;
}

.card:hover .circle::before {
    background: linear-gradient(0deg, var(--bg-color-1) 0%,  var(--bg-color-2) 100%);
    clip-path: circle(400px at center);
}

.card img {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 200px;
    pointer-events: none;
    transition: 1s;
}

.card:hover img {
    left: 85%;
}

.card .content {
    position: relative;
    width: 50%;
    padding: 10%;
    opacity: 0;
    visibility: hidden;
    transition: 0s;
}

.card:hover .content {
    opacity: 1;
    visibility: visible;
    transition: 2s;
}

.card .content h2 {
    color: white;
    margin-bottom: 15px;
    font-size: 2.2em;
}

.card .content p {
    color: white;
}

.card .content a {
    position: relative;
    padding: 10px 30px;
    background: white;
    color: var(--color);
    border-radius: 10px;
    margin-top: 35px;
    display: inline-block;
    text-decoration: none;
}

/** contact blocks */
#contact ul {
    position: relative;
    display: flex;
    list-style: none;
}

#contact ul li {
    position: relative;
    display: inline-block;
    width: 150px;
    height: 150px;
    font-size: 130px;
    margin: 50px;
    border-radius: 10px;
    overflow: hidden;
    color: white;
    text-align: center;
    border: 1px solid rgba(255,255,255,0.6);
    border-right: 1px solid rgba(255,255,255,0.2);
    border-bottom: 1px solid rgba(255,255,255,0.2);
    box-shadow: 5px 5px 30px rgba(0,0,0,0.3);
    transition: 0.5s;
}

#contact ul li:hover {
    transform: translateY(-30px);
}

#contact ul li:hover i {
    background: linear-gradient(180deg, rgba(87,101,116,1) 0%, rgba(173,162,171,1) 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    color: rgba(100, 99, 115,1);
}

#contact ul li::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 150px;
    height: 100%;
    background: rgba(255,255,255,0.5);
    transform: skewX(45deg) translateX(300px);
    transition: 0.5s;
}

#contact ul li:hover::before {
    transform: skewX(45deg) translateX(-300px);
}

#contact ul li p { 
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: block;
    width: 100%;
    font-size: 25px;
    opacity: 0;
    transition: 0s;
}

#contact ul li:hover p {
    opacity: 1;
    transition: 2s;
}

/** general text styling */
.courier-new {
    font-family:'Courier New', monospace;
}

.times-new-roman {
    font-family: 'Times New Roman', serif;
}

.poiret {
    font-family: 'Poiret One', cursive;
}

.luminescent-white {
    color: whitesmoke;
    text-shadow: 1px 1px 2px black, 1px 1px 5px white;
}

.font-larger-500 {
    font-size: larger;
    font-weight: 500;
}

